update juvi text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         src="images/profile.jpg"
         alt="Chanice's Profile Picture"
       />
-      <p>I just want to code like the pro I believe I am! 😎</p>
+      <p>Coding like the pro I believe I am! 😎</p>
+      <p>I will be back to update this in future!🚀</p>
       <div class="projects">
         <a
           href="https://www.linkedin.com/in/chanice-irungu-a5b235107/"
