--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>
       Chanice Irungu | Full Stack Developer | Frontend Developer | Backend
@@ -20,7 +20,6 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&family=Space+Mono:ital@0;1&display=swap"
       rel="stylesheet"
     />
-    <title>Shan's Profile</title>
   </head>
   <body>
     <div class="rain front-row"></div>
@@ -31,20 +30,160 @@
         src="images/profile.jpg"
         alt="Chanice's Profile Picture"
       />
-      <p>Coding like the pro I believe I am! 😎</p>
-      <p>I will be back to update this in future!🚀</p>
+      <p>Full Stack Developer | Front-End Specialist | AI Enthusiast</p>
+      <p>A code-wielding wizard!🪄 😎</p>
       <div class="projects">
         <a
-          href="https://www.linkedin.com/in/chanice-irungu-a5b235107/"
-          target="_blank"
+          href="#projects"
           >Discover Chanice's Projects</a
         >
       </div>
     </div>
 
+    <!-- About me section -->
+    <div class="card about-me-container">
+      <h2 class="about-me-title">About Me</h2>
+      <div class="about-me-content" id="aboutMeContent">
+        <p>
+          Greetings, fellow humans and potential AI overlords! 👋 I'm Chanice, a code-wielding wizard who turns caffeine
+          into software faster than you can say "Stack Overflow."
+        </p>
+        <p>
+          By day, I'm a Full Stack Engineer, crafting digital wonders. By night, I'm a secret agent on a mission to rid
+          the world of unnecessary semicolons and misaligned divs.
+        </p>
+        <p>
+          When I'm not busy arguing with my rubber duck, you can find me scaling the treacherous peaks of RESTful APIs
+          or diving deep into the ocean of FinTech. 🦈💰
+        </p>
+        <div id="expandedContent" style="display: none;">
+          <p>
+            So, whether you're here to collaborate on the next big thing in tech, swap coding horror stories, or just
+            appreciate my collection of nerdy t-shirts, stick around! Together, we'll make the digital world a
+            funnier, more efficient, and slightly quirkier place – one commit at a time. 🚀🎭
+          </p>
+          <p>P.S. If you hear maniacal laughter coming from my direction, don't worry. It's just me, debugging.</p>
+        </div>
+      </div>
+      <button class="read-more-btn" id="readMoreBtn">Read More</button>
+    </div>
+  
+
+    <div class="card">
+      <h2>Experience</h2>
+      <h3>Full Stack Engineer Consultant - European Commission for the Control of Foot-and-Mouth Disease (EUFMD)</h3>
+      <p>March 2023 - Present</p>
+      <ul class="experience-list">
+        <li>Designed and implemented user-friendly platforms for UN veterinary authorities.</li>
+        <li>Integrated complex data visualizations and multi-language features.</li>
+        <li>Led a team of 6 interns and one junior engineer.</li>
+      </ul>
+
+      <h3>Game Developer - Usiku Games, Nairobi</h3>
+      <p>January 2022 - March 2023</p>
+      <ul class="experience-list">
+        <li>Led the development and revamp of over 30 legacy games.</li>
+        <li>Created prototypes and refined game mechanics for improved user experience.</li>
+      </ul>
+      <button class="read-more-btn" >Read More</button>
+    </div>
+
+    <div class="card" id="projects">
+      <h2>Projects</h2>
+      <div class="project" onclick="toggleDescription('project1')">
+        <h3>Haba Na Haba SAAS</h3>
+        <p>FinTech application for informal cooperative societies</p>
+        <div id="project1" class="project-description">
+          <p>A comprehensive FinTech SaaS solution designed for informal cooperative societies. The platform empowers these organizations to streamline financial management, track investments efficiently, facilitate loan management, and automate comprehensive reporting.</p>
+          <p><strong>Tech Stack:</strong> Next.js, PostgreSQL, shadcn, Tailwind CSS, D3.js, bcrypt</p>
+          <br>
+          <a href="https://habanahaba.vercel.app/" target="_blank">View Project</a>
+        </div>
+      </div>
+      <div class="project" onclick="toggleDescription('project2')">
+        <h3>Catalysts Africa</h3>
+        <p>Website for a non-profit organization</p>
+        <div id="project2" class="project-description">
+          <p>A responsive website built for Catalysts Africa, showcasing modern web development techniques and optimized for performance.</p>
+          <p><strong>Tech Stack:</strong> Vue.js, Tailwind CSS, Node.js, Express.js</p>
+          <br>
+          <a href="https://catalystsafrica.org/" target="_blank">View Project</a>
+        </div>
+      </div>
+      <div class="project" onclick="toggleDescription('project3')">
+        <h3>EUFMD Training Management Platform</h3>
+        <p>Multi-language platform for veterinary authorities</p>
+        <div id="project3" class="project-description">
+          <p>A comprehensive platform used by UN veterinary authorities across various countries. Features include data visualizations, multi-language support, and competency tracking systems.</p>
+          <p><strong>Tech Stack:</strong> Vue3, TailwindCSS, Leaflet.js, NodeJs, Express, AWS, Azure, Nginx, MySQL, JWT, D3.JS</p>
+          <br>
+          <a href=" https://eufmd-tom.com/#" target="_blank">View Project</a>
+        </div>
+      </div>
+      <div class="project" onclick="toggleDescription('project4')">
+        <h3>Game like 2048</h3>
+        <p>Okoa Simba</p>
+        <div id="project4" class="project-description">
+          <p>A version of 2048<p/>
+            <br>
+          <a href="https://games-dev.usiku.games/simba/" target="_blank">View Project</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>Skills</h2>
+      <div class="skills">
+        <span class="skill">Vue.js</span>
+        <span class="skill">React.js</span>
+        <span class="skill">Next.js</span>
+        <span class="skill">TypeScript</span>
+        <span class="skill">Node.js</span>
+        <span class="skill">MySQL</span>
+        <span class="skill">PostgreSQL</span>
+        <span class="skill">MongoDB</span>
+        <span class="skill">Tailwind CSS</span>
+        <span class="skill">D3.js</span>
+        <span class="skill">AWS</span>
+        <span class="skill">Azure</span>
+        <span class="skill">Docker</span>
+        <span class="skill">GraphQL</span>
+        <span class="skill">Agile Methodologies</span>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>Hobbies & Interests</h2>
+      <div class="hobby-item">
+        <span class="hobby-icon">📸</span>
+        <p><strong>Photography:</strong> Capturing moments and exploring visual storytelling.</p>
+      </div>
+      <div class="hobby-item">
+        <span class="hobby-icon">🏋️‍♀️</span>
+        <p><strong>Fitness:</strong> Staying active and maintaining a healthy work-life balance.</p>
+      </div>
+      <div class="hobby-item">
+        <span class="hobby-icon">🌱</span>
+        <p><strong>Sustainable Living:</strong> Exploring eco-friendly technologies and practices.</p>
+      </div>
+      <div class="hobby-item">
+        <span class="hobby-icon">🎮</span>
+        <p><strong>Gaming:</strong> Enjoying and analyzing game mechanics for both fun and professional insight.</p>
+      </div>
+    </div>
+
+    <div class="card">
+      <h2>Fun Facts</h2>
+      <ul class="fun-facts">
+        <li>I once coded for 24 hours straight during a hackathon and emerged victorious!</li>
+        <li>I've contributed to open-source projects while traveling across 3 continents.</li>
+        <li>I maintain a secret GitHub repository filled with coding dad jokes.</li>
+      </ul>
+    </div>
+
     <div class="card">
       <h2>
-        I love to play mind games,so here is one I made for you!
+        I love to play mind games, so here is one I made for you!
         <span class="emoji-container">
           <span class="emoji wink">😜</span>
           <span class="emoji smile">😛</span>
@@ -57,18 +196,13 @@
     </div>
 
     <div class="card">
-      <h2>Frontend Development 💻</h2>
-      <p>I am passionate about <strong>Full Stack Development</strong>.</p>
-    </div>
-
-    <div class="card">
       <h2>Lawn Tennis 🎾</h2>
       <p>I am passionate about Lawn Tennis.</p>
     </div>
 
     <div class="card">
       <h3>Follow me</h3>
-      <ul>
+      <ul class="social-links">
         <li>
           <a href="https://github.com/ChaniceIrungu" target="_blank">
             <i class="fab fa-github"></i> Github
@@ -94,5 +228,34 @@
         </li>
       </ul>
     </div>
+
+    <script>
+      function toggleDescription(id) {
+        var description = document.getElementById(id);
+        if (description.style.display === "none" || description.style.display === "") {
+          description.style.display = "block";
+        } else {
+          description.style.display = "none";
+        }
+      }
+
+      // Add animation delay to hobby items
+      document.addEventListener('DOMContentLoaded', (event) => {
+        const hobbyItems = document.querySelectorAll('.hobby-item');
+        hobbyItems.forEach((item, index) => {
+          item.style.animationDelay = `${index * 0.2}s`;
+        });
+      });
+
+      const readMoreBtn = document.getElementById('readMoreBtn');
+    const aboutMeContent = document.getElementById('aboutMeContent');
+    const expandedContent = document.getElementById('expandedContent');
+
+    readMoreBtn.addEventListener('click', () => {
+      const isExpanded = aboutMeContent.classList.toggle('expanded');
+      expandedContent.style.display = isExpanded ? 'block' : 'none';
+      readMoreBtn.textContent = isExpanded ? 'Read Less' : 'Read More';
+    });
+    </script>
   </body>
 </html>
