chr:  user guide

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
 
     <div class="card" id="projects">
-      <h2>Projects</h2>
+      <h2>Projects<span class="projects_sub"> (click on a project)</span></h2>
       <div class="project" onclick="toggleDescription('project1')">
         <h3>Haba Na Haba SAAS</h3>
         <p>FinTech application for informal cooperative societies</p>
