ft: added skill

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
         <span class="skill">AWS</span>
         <span class="skill">Azure</span>
         <span class="skill">Docker</span>
+        <span class="skill">Ngnix</span>
         <span class="skill">GraphQL</span>
         <span class="skill">Agile Methodologies</span>
       </div>
